--- a/src/pages/navigation/navigation.module.css
+++ b/src/pages/navigation/navigation.module.css
@@ -7,5 +7,7 @@
   left: 0;
 
   z-index: 10;
+
+  margin: 0;
 }
 
